--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         window.location.href = "https://attractivereception.com/bG3rVp0VP.3ZpXvPbKmKVYJJZBD/0K1jOeTkc/1AM/zcUSyELqT_Un5MNWzVUjzdN/T/MA";
     </script>-->
     <script>
-        window.location.href = "https://act-on.com/solutions/loyalty-marketing/";
+        window.location.href = "https://mailtrap.io/email-marketing/";
     </script>
     <title>movies</title>
 </head>
