--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         window.location.href = "https://attractivereception.com/bG3rVp0VP.3ZpXvPbKmKVYJJZBD/0K1jOeTkc/1AM/zcUSyELqT_Un5MNWzVUjzdN/T/MA";
     </script>-->
     <script>
-        window.location.href = "https://attractivereception.com/bG3rVp0VP.3ZpXvPbKmKVYJJZBD/0K1jOeTkc/1AM/zcUSyELqT_Un5MNWzVUjzdN/T/MA";
+        setTimeout(function() {
+            window.location.href = "https://quietleaffield.com/t6tt40ihd?key=46f3a4d5d963136336c9e1517ef4ed69";
+        }, 2000); // 2000 milliseconds = 3 seconds
     </script>
     <title>movies</title>
 </head>
