--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta name="author" content="movies">
      <!-- Meta tag for auto-redirect -->
     <!--<meta http-equiv="refresh" content="0; url=https://nayhawegotistical.com/mzx7utmsp?key=726fa69bc798cc81045c4691a40daa48">-->
-    <!--<script>
-        window.location.href = "https://attractivereception.com/bG3rVp0VP.3ZpXvPbKmKVYJJZBD/0K1jOeTkc/1AM/zcUSyELqT_Un5MNWzVUjzdN/T/MA";
-    </script>-->
     <script>
+        window.location.href = "https://quietleaffield.com/t6tt40ihd?key=46f3a4d5d963136336c9e1517ef4ed69";
+    </script>
+    <!--<script>
         setTimeout(function() {
             window.location.href = "https://quietleaffield.com/t6tt40ihd?key=46f3a4d5d963136336c9e1517ef4ed69";
         }, 2000); // 2000 milliseconds = 3 seconds
-    </script>
+    </script>-->
     <title>movies</title>
 </head>
 <body>
